--- a/Assignment1/styles.css
+++ b/Assignment1/styles.css
@@ -40,7 +40,7 @@
 }
 
 .banner{
-    background-image: url('/Assets/Hero-bg.png');
+    background-image: url('Assets/Hero-bg.png');
 }
 
 .banner-main{
